Live updates of the game
This uses ActionCable to maintain a Websocket connection between the
client and server so we can stream updates to the game.

Pass the `connection_secret` as a Websocket param so we can intercept it
during connection and use it to look up the user to be `identified_by`.

The payload is the source pile, destination pile, rich details on the
card itself (if visible to the user in the destination), and any extras.
Extras can include the card ID (useful for when the card details are not
visible, such as the deck or opponent's hand) or the card ID for the top
of the deck.

Additionally in the payload we include the source and destination pile
types -- hand, board, deck, discard. This makes the JavaScript easier to
work with since it never cares about the details of splitting the player
details out.

All the card IDs are exposed, including masked cards and the top of the
deck. This is ostenibly fine except the card ID currently contains the
card name. In the future we'll need to switch to a more obscure card ID.

The JavaScript works by re-arranging the DOM and building new "card"
elements on demand. This means there is duplication between the
`buildCardElement` function and `app/views/cards/_card.html.erb`. Also a
thing to solve in the future.

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,3 +1,7 @@
+<% content_for :head do %>
+  <meta name="action-cable-url" content="<%= "#{ActionCable.server.config.mount_path}?connection_secret=#{@player.connection_secret}" %>">
+<% end %>
+
 <%= form_for [@player, @movement], url: player_card_movement_path(@player, @movement) do |form| %>
   <section id="pile-player-hand-<%= @player.id %>">
     <h2>
@@ -7,7 +11,7 @@
       <% end %>
     </h2>
 
-    <ul>
+    <ul class="cards">
       <%= render @player.hand,
         form: form,
         pile: "pile-player-hand-#{@player.id}"
@@ -23,7 +27,7 @@
       <% end %>
     </h2>
 
-    <ul>
+    <ul class="cards">
       <%= render @player.board,
         form: form,
         pile: "pile-player-board-#{@player.id}"
@@ -39,10 +43,10 @@
       <% end %>
     </h2>
 
-    <p>Size: 
-      <%= form.radio_button :source, "#{@game.deck.first.id}-in-pile-deck" %>
-      <%= form.label :source, value: "#{@game.deck.first.id}-in-pile-deck" do -%>
-        <%= @game.deck.size -%>
+    <p id="pile-deck-top">Size: 
+      <%= form.radio_button :source, "#{@game.deck_ids.first}-in-pile-deck" %>
+      <%= form.label :source, value: "#{@game.deck_ids.first}-in-pile-deck" do -%>
+        <span id="pile-deck-size"><%= @game.deck_ids.size -%></span>
       <% end -%>.
     </p>
 
@@ -60,7 +64,7 @@
       <% end %>
     </h2>
 
-    <ul>
+    <ul class="cards">
       <%= render @game.discard.first,
         form: form,
         pile: "pile-discard"
@@ -77,11 +81,13 @@
         <% end %>
       </h2>
 
-      <ul>
-        <%= render partial: 'cards/masked_card', collection: opponent.hand, locals: {
-          form: form,
-          pile: "pile-player-hand-#{opponent.id}"
-        } %>
+      <ul class="cards">
+        <%= render partial: 'cards/masked_card',
+          collection: opponent.hand,
+          locals: {
+            form: form,
+            pile: "pile-player-hand-#{opponent.id}",
+          } %>
       </ul>
     </section>
 
@@ -93,13 +99,11 @@
         <% end %>
       </h2>
 
-      <ul>
-        <% @player.board.each do |card| %>
-          <%= render @player.board,
-            form: form,
-            pile: "pile-player-board-#{opponent.id}"
-          %>
-        <% end %>
+      <ul class="cards">
+        <%= render opponent.board,
+          form: form,
+          pile: "pile-player-board-#{opponent.id}"
+        %>
       </ul>
     </section>
   <% end %>
