--- a/app/views/cards/_card.html.erb
+++ b/app/views/cards/_card.html.erb
@@ -1,4 +1,4 @@
-<li class="card" id="<%= card.id %>">
+<li class="card" id="<%= card.id %>" draggable="true">
   <%= form.radio_button :source, "#{card.id}-in-#{pile}" %>
   <%= form.label :source, value: "#{card.id}-in-#{pile}" do %>
     <span class="card__name"><%= card.name %></span>
