--- a/app/views/cards/_masked_card.html.erb
+++ b/app/views/cards/_masked_card.html.erb
@@ -1,3 +1,3 @@
-<li class="masked-card" id="<%= masked_card.id %>">
+<li class="masked-card" id="<%= masked_card.id %>" draggable="true">
   Unknown card
 </li>
