Submit the form in the background
Use rails-ujs to fire a `submit` action for the form, and add
`data-remote="true"` to the form. Combined, this will submit the form
using AJAX.

Now we need to show the latest. Publish the websocket action updates to
every player. Mask out the cards for all but our player when the
destination pile is a hand. This masking is the bulk of changes in here.

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -7,7 +7,7 @@
   <%= javascript_pack_tag :application, :game %>
 <% end %>
 
-<%= form_for [@player, @movement], url: player_card_movement_path(@player, @movement) do |form| %>
+<%= form_for [@player, @movement], url: player_card_movement_path(@player, @movement), remote: true do |form| %>
   <section id="pile-player-hand-<%= @player.id %>" class="pile pile__hand pile__hand__yours">
     <h2>
       <%= form.radio_button :dest_pile, "pile-player-hand-#{@player.id}", class: "pile-radio" %>
