The image and link is not draggable
Ran into two issues:

- The image within a card defaults to draggable, but we don't expect an
image to be dropped on a pile, just a card.
- Links default to draggable, but there's no use for "Inspect" being
dropped on a pile.

Explicitly set `draggable="false"` in these cases.

https://www.w3.org/TR/html51/editing.html#element-attrdef-global-draggable

> Otherwise, the element’s draggable content attribute has the state
> auto. If the element is an img element, an object element that
> represents an image, or an a element with an href content attribute,
> the draggable IDL attribute must return true; otherwise, the draggable
> IDL attribute must return false.

--- a/app/views/cards/_card.html.erb
+++ b/app/views/cards/_card.html.erb
@@ -2,7 +2,7 @@
   <%= form.radio_button :source, "#{card.id}-in-#{pile}" %>
   <%= form.label :source, value: "#{card.id}-in-#{pile}", class: "card__details" do %>
     <span class="card__name"><%= card.name %></span>
-    <span class="card__image"><img src="https://placekitten.com/175/175"></span>
+    <span class="card__image"><img src="https://placekitten.com/175/175" draggable="false"></span>
     <span class="card__type" title="<%= card.type %>"></span>
     <span class="card__charge"><%= card.charge %></span>
     <span class="card__ability"><%= card.ability %></span>
