Show a masked card for the deck
Change the way we render both the deck and the discard pile to be a
"card count": show a pseudo card with a size, then offset a card atop
it. This has a nice effect where you can see the top card (masked, for
the deck) and then below that is a second card-like thing peaking out
with the number of cards in the pile.

We want to handle the case where the discard or deck are empty. We do
this by grabbing any existing card, removing it if it exists, then
adding our new card.

Along the way I learned some DOM:

- [`ChildNode.remove()`] is the new `c.parentElement.removeChild(c)`.
- [`HTMLCollection`] can index by element `name` in addition to treating
it like an array. Turns out this is how
`document.forms["card_movement"]` works.

[`ChildNode.remove()`]: https://developer.mozilla.org/en-US/docs/Web/API/ChildNode/remove
[`HTMLCollection`]: https://developer.mozilla.org/en-US/docs/Web/API/HTMLCollection

--- a/app/assets/stylesheets/game.scss
+++ b/app/assets/stylesheets/game.scss
@@ -123,7 +123,7 @@ ul.cards {
   margin-top: 0.5em;
 }
 
-.cards__mask .card {
+.cards__mask .card, .cards__count .card {
   width: 200px;
   height: 323px;
   display: inline-block;
@@ -145,15 +145,35 @@ ul.cards {
   align-items: start;
 }
 
-.cards__mask .masked-card {
-  width: 200px;
-  height: 323px;
+.cards__count .count-card {
+  width: 188px; // 200 - 12
+  height: 311px; // 323px - 12
   display: inline-block;
   border: 1px solid black;
   border-radius: 5px;
   margin-left: 0.5em;
   margin-top: 0.5em;
+  background-color: grey;
+  padding-left: 12px;
+  padding-top: 12px;
+}
+
+.cards__count .card, .cards__count .masked-card {
+  margin-left: -160px;
+  margin-top: 1em;
+}
+
+.cards__mask .masked-card, .cards__count .masked-card {
+  width: 200px;
+  height: 323px;
+  display: inline-block;
+  border: 1px solid black;
+  border-radius: 5px;
   background-image: url(https://placekitten.com/200/323);
+}
+
+.cards__mask .masked-card {
+  margin-left: 0.5em;
 }
 
 .masked-card label {
