Refactor: only pass ID to masked_card partial
This saves us from instantiating Card objects only to pull out the ID.

--- a/app/views/cards/_masked_card.html.erb
+++ b/app/views/cards/_masked_card.html.erb
@@ -1,6 +1,6 @@
-<li class="masked-card" id="<%= masked_card.id %>" draggable="true">
-  <%= form.radio_button :source, "#{masked_card.id}-in-#{pile}" %>
-  <%= form.label :source, value: "#{masked_card.id}-in-#{pile}" do %>
+<li class="masked-card" id="<%= masked_card %>" draggable="true">
+  <%= form.radio_button :source, "#{masked_card}-in-#{pile}" %>
+  <%= form.label :source, value: "#{masked_card}-in-#{pile}" do %>
     Unknown card
   <% end %>
 </li>
