--- a/app/assets/stylesheets/game.scss
+++ b/app/assets/stylesheets/game.scss
@@ -1,7 +1,6 @@
 body {
-  // 119, 136, 153
-  // hsl 210, 14.3, 53.3
-  background-color: lightslategray;
+  background-color: #fdf498;
+  font-family: sans-serif;
 }
 
 .pile {
@@ -10,8 +9,8 @@ body {
 }
 
 .pile__hand {
-  background-color: #b1bbc5;
-  border: 1px solid #b1bbc5;
+  background-color: #fdf8c1;
+  border: 5px solid #b1aa6a;
 }
 
 .pile__hand__yours {
@@ -23,8 +22,8 @@ body {
 }
 
 .pile__board {
-  background-color: #c3cad2;
-  border: 1px solid #c3cad2;
+  background-color: #fdf8c1;
+  border: 5px solid #b1aa6a;
 }
 
 .pile__board__yours {
@@ -36,14 +35,14 @@ body {
 }
 
 .pile__deck {
-  background-color: #495561;
-  border: 1px solid #495561;
+  background-color: #fdf8c1;
+  border: 5px solid #b1aa6a;
   grid-area: deck;
 }
 
 .pile__discard {
-  background-color: #333b44;
-  border: 1px solid #333b44;
+  background-color: #fdf8c1;
+  border: 5px solid #b1aa6a;
   grid-area: discard;
 }
 
@@ -62,20 +61,16 @@ ul.cards {
   align-items: start;
 }
 
-.card__bronze {
-  background-color: #cd7f32;
+.card__neutral {
+  background-color:  white;
 }
 
-.card__bronze .card__type {
-  background-image: url(https://placekitten.com/10/10);
+.card__us {
+  background-color: #0392cf;
 }
 
-.card__silver {
-  background-color: silver;
-}
-
-.card__silver .card__type {
-  background-image: url(https://placekitten.com/10/10);
+.card__ussr {
+  background-color: #ee4035;
 }
 
 .card__name {
@@ -96,6 +91,7 @@ ul.cards {
 }
 .card__ability {
   grid-area: ability;
+  font-family: serif;
 }
 
 .card__image {
@@ -105,7 +101,7 @@ ul.cards {
 .cards__stack .card {
   width: 200px;
   height: 323px;
-  border: 1px solid black;
+  border: 5px solid black;
   border-radius: 5px;
   padding: 0.5em;
   margin-left: 0.5em;
@@ -116,7 +112,7 @@ ul.cards {
   width: 200px;
   height: 323px;
   display: inline-block;
-  border: 1px solid black;
+  border: 5px solid black;
   border-radius: 5px;
   padding: 0.5em;
   margin-left: 0.5em;
@@ -127,7 +123,7 @@ ul.cards {
   width: 200px;
   height: 323px;
   display: inline-block;
-  border: 1px solid black;
+  border: 5px solid black;
   border-radius: 5px;
   padding: 0.5em;
   margin-left: 0.5em;
@@ -147,9 +143,9 @@ ul.cards {
 
 .cards__count .count-card {
   width: 188px; // 200 - 12
-  height: 311px; // 323px - 12
+  height: 315px; // 323px - 12
   display: inline-block;
-  border: 1px solid black;
+  border: 5px solid black;
   border-radius: 5px;
   margin-left: 0.5em;
   margin-top: 0.5em;
@@ -167,9 +163,8 @@ ul.cards {
   width: 200px;
   height: 323px;
   display: inline-block;
-  border: 1px solid black;
+  border: 5px solid black;
   border-radius: 5px;
-  background-image: url(https://placekitten.com/200/323);
 }
 
 .cards__mask .masked-card {
@@ -185,7 +180,7 @@ ul.cards {
 }
 
 .drop-target {
-  border: 2px solid green;
+  border: 5px dashed #7bc043;
 }
 
 .drop-over {
