--- a/app/views/cards/_card.html.erb
+++ b/app/views/cards/_card.html.erb
@@ -1,10 +1,10 @@
-<li class="card card__<%= card.type %>" id="<%= card.id %>" draggable="true">
+<li class="card card__<%= card.owner %>" id="<%= card.id %>" draggable="true">
   <%= form.radio_button :source, "#{card.id}-in-#{pile}" %>
   <%= form.label :source, value: "#{card.id}-in-#{pile}", class: "card__details" do %>
-    <span class="card__name"><%= card.name %></span>
-    <span class="card__image"><img src="https://placekitten.com/175/175" draggable="false"></span>
-    <span class="card__type" title="<%= card.type %>"></span>
-    <span class="card__charge"><%= card.charge %></span>
-    <span class="card__ability"><%= card.ability %></span>
+    <span class="card__name"><%= card.title %></span>
+    <span class="card__image"></span>
+    <span class="card__type" title="<%= card.owner %>"></span>
+    <span class="card__charge"><%= card.ops %></span>
+    <span class="card__ability"><%= card.text %></span>
   <% end %>
 </li>
